[package]
name = "mysterious_cache"
version = "0.1.0"
authors = ["Christopher R. Miller <xpm@mysteriouspants.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["shared_cache"]

shared_cache = ["parking_lot"]

[dependencies]
parking_lot = { version = "0.11.1", optional = true }
